@@ -6,6 +6,7 @@ base-installer (1.43) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Add support for 2.6 kernels on ARM.
   * Add support for NSLU2 (arm, armeb).
+  * Add a test suite entry for mips/sb1-swarm-bn kernels.
 
  -- Frans Pop <fjp@debian.org>  Wed, 11 Jan 2006 03:13:45 +0100
 
